--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "clean:install:build": "npm run clean && npm install && npm run build",
     "clean:deps": "npx --yes rimraf ./packages/*/node_modules ./node_modules",
     "clean:coverage": "npx rimraf ./packages/*/coverage",
-    "clean:build-artifacts": "npx rimraf ./packages/*/lib"
+    "clean:build-artifacts": "npx rimraf ./packages/*/lib",
+    "log": "npm login"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
