--- a/packages/3id-did-resolver/package.json
+++ b/packages/3id-did-resolver/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ceramicnetwork/3id-did-resolver",
+  "name": "@dustil/3id-did-resolver",
   "version": "2.8.0-rc.0",
   "description": "DID Resolver for the 3ID method",
   "keywords": [
