--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ceramicnetwork/cli",
+  "name": "@dustil/cli",
   "version": "2.17.0-rc.0",
   "description": "Typescript implementation of the Ceramic CLI",
   "keywords": [
