--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ceramicnetwork/common",
+  "name": "@dustil/common",
   "version": "2.15.0-rc.0",
   "description": "Ceramic common types and utilities",
   "keywords": [
