--- a/packages/http-client/package.json
+++ b/packages/http-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ceramicnetwork/http-client",
+  "name": "@dustil/http-client",
   "version": "2.12.0-rc.0",
   "description": "An http client for the ceramic network",
   "keywords": [
