--- a/packages/ipfs-daemon/package.json
+++ b/packages/ipfs-daemon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ceramicnetwork/ipfs-daemon",
+  "name": "@dustil/ipfs-daemon",
   "version": "2.8.0-rc.0",
   "description": "IPFS daemon wraps js-ipfs instance with dag-jose codec enabled",
   "keywords": [
