--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ceramicnetwork/logger",
+  "name": "@dustil/logger",
   "version": "2.5.0",
   "description": "Ceramic file logging utilities",
   "keywords": [
