--- a/packages/stream-model/package.json
+++ b/packages/stream-model/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ceramicnetwork/stream-model",
+  "name": "@dustil/stream-model",
   "version": "0.13.0-rc.0",
   "description": "Ceramic Model stream type",
   "keywords": [
