--- a/packages/streamid/package.json
+++ b/packages/streamid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ceramicnetwork/streamid",
+  "name": "@dustil/streamid",
   "version": "2.8.0-rc.0",
   "description": "Ceramic Stream Ids",
   "keywords": [
