--- a/packages/blockchain-utils-linking/package.json
+++ b/packages/blockchain-utils-linking/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/blockchain-utils-linking",
-  "version": "2.7.0-rc.1",
+  "version": "2.7.0",
   "description": "Blockchain utils for linking blockchain accounts to DID",
   "keywords": [
     "ceramic",
