--- a/packages/pinning-aggregation/package.json
+++ b/packages/pinning-aggregation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/pinning-aggregation",
-  "version": "2.7.0-rc.1",
+  "version": "2.7.0",
   "description": "Aggregated pinning",
   "keywords": [
     "ceramic",
