--- a/packages/pinning-powergate-backend/package.json
+++ b/packages/pinning-powergate-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/pinning-powergate-backend",
-  "version": "2.7.0-rc.1",
+  "version": "2.7.0",
   "description": "Powergate Pinning backend",
   "keywords": [
     "ceramic",
