--- a/packages/stream-caip10-link-handler/package.json
+++ b/packages/stream-caip10-link-handler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/stream-caip10-link-handler",
-  "version": "2.8.0-rc.1",
+  "version": "2.8.0",
   "description": "Ceramic AccountLink stream handler",
   "keywords": [
     "ceramic",
