--- a/packages/stream-caip10-link/package.json
+++ b/packages/stream-caip10-link/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/stream-caip10-link",
-  "version": "2.10.0-rc.1",
+  "version": "2.10.0",
   "description": "Ceramic AccountLink stream type",
   "keywords": [
     "ceramic",
