--- a/packages/stream-handler-common/package.json
+++ b/packages/stream-handler-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/stream-handler-common",
-  "version": "1.5.0-rc.1",
+  "version": "1.5.0",
   "description": "Ceramic stream handler common types and utilities",
   "keywords": [
     "ceramic",
