--- a/packages/stream-model-handler/package.json
+++ b/packages/stream-model-handler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/stream-model-handler",
-  "version": "0.14.0-rc.1",
+  "version": "0.14.0",
   "description": "Ceramic Model stream handler",
   "keywords": [
     "ceramic",
