--- a/packages/stream-model/package.json
+++ b/packages/stream-model/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/stream-model",
-  "version": "0.13.0-rc.1",
+  "version": "0.13.0",
   "description": "Ceramic Model stream type",
   "keywords": [
     "ceramic",
