--- a/packages/stream-tile/package.json
+++ b/packages/stream-tile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/stream-tile",
-  "version": "2.11.0-rc.1",
+  "version": "2.11.0",
   "description": "Ceramic Tile Document stream type",
   "keywords": [
     "ceramic",
