--- a/packages/streamid/package.json
+++ b/packages/streamid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/streamid",
-  "version": "2.8.0-rc.1",
+  "version": "2.8.0",
   "description": "Ceramic Stream Ids",
   "keywords": [
     "ceramic",
