--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/cli",
-  "version": "2.17.0",
+  "version": "2.17.1",
   "description": "Typescript implementation of the Ceramic CLI",
   "keywords": [
     "Ceramic",
@@ -41,15 +41,15 @@
   },
   "dependencies": {
     "@awaitjs/express": "^0.9.0",
-    "@ceramicnetwork/3id-did-resolver": "^2.8.0-rc.0",
-    "@ceramicnetwork/common": "^2.15.0-rc.0",
-    "@ceramicnetwork/core": "^2.20.0-rc.0",
-    "@ceramicnetwork/http-client": "^2.12.0-rc.0",
-    "@ceramicnetwork/ipfs-daemon": "^2.8.0-rc.0",
-    "@ceramicnetwork/logger": "^2.5.0",
     "@ceramicnetwork/observability": "^1.0.6",
-    "@ceramicnetwork/stream-tile": "^2.11.0-rc.0",
-    "@ceramicnetwork/streamid": "^2.8.0-rc.0",
+    "@dustil/3id-did-resolver": "^2.8.1",
+    "@dustil/common": "^2.15.2",
+    "@dustil/core": "^2.20.1",
+    "@dustil/http-client": "^2.12.1",
+    "@dustil/ipfs-daemon": "^2.8.1",
+    "@dustil/logger": "^2.5.0",
+    "@dustil/stream-tile": "^2.11.1",
+    "@dustil/streamid": "^2.8.0-rc.0",
     "@stablelib/random": "^1.0.1",
     "aws-sdk": "^2.1049.0",
     "commander": "^9.4.1",
@@ -78,8 +78,8 @@
     "uint8arrays": "^3.0.0"
   },
   "devDependencies": {
-    "@ceramicnetwork/stream-model": "^0.13.0-rc.0",
-    "@ceramicnetwork/stream-tile-handler": "^2.10.0-rc.0",
+    "@dustil/stream-model": "^0.13.1",
+    "@dustil/stream-tile-handler": "^2.10.1",
     "@stablelib/sha256": "^1.0.1",
     "@types/express": "^4.17.13",
     "@types/levelup": "^5.1.0",
