--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/core",
-  "version": "2.20.0",
+  "version": "2.20.1",
   "description": "Typescript implementation of the Ceramic protocol",
   "keywords": [
     "Ceramic",
@@ -41,21 +41,21 @@
     "clean": "npx rimraf ./lib"
   },
   "dependencies": {
-    "@ceramicnetwork/common": "^2.15.0-rc.0",
-    "@ceramicnetwork/ipfs-topology": "^2.9.0-rc.0",
     "@ceramicnetwork/observability": "^1.0.4",
-    "@ceramicnetwork/pinning-aggregation": "^2.7.0-rc.0",
-    "@ceramicnetwork/pinning-ipfs-backend": "^2.7.0-rc.0",
-    "@ceramicnetwork/stream-caip10-link": "^2.10.0-rc.0",
-    "@ceramicnetwork/stream-caip10-link-handler": "^2.8.0-rc.0",
-    "@ceramicnetwork/stream-model": "^0.13.0-rc.0",
-    "@ceramicnetwork/stream-model-handler": "^0.14.0-rc.0",
-    "@ceramicnetwork/stream-model-instance": "^0.11.0-rc.0",
-    "@ceramicnetwork/stream-model-instance-handler": "^0.15.0-rc.0",
-    "@ceramicnetwork/stream-tile": "^2.11.0-rc.0",
-    "@ceramicnetwork/stream-tile-handler": "^2.10.0-rc.0",
-    "@ceramicnetwork/streamid": "^2.8.0-rc.0",
     "@datastructures-js/priority-queue": "^6.1.0",
+    "@dustil/common": "^2.15.2",
+    "@dustil/ipfs-topology": "^2.9.1",
+    "@dustil/pinning-aggregation": "^2.7.1",
+    "@dustil/pinning-ipfs-backend": "^2.7.1",
+    "@dustil/stream-caip10-link": "^2.10.1",
+    "@dustil/stream-caip10-link-handler": "^2.8.1",
+    "@dustil/stream-model": "^0.13.1",
+    "@dustil/stream-model-handler": "^0.14.1",
+    "@dustil/stream-model-instance": "^0.11.1",
+    "@dustil/stream-model-instance-handler": "^0.15.1",
+    "@dustil/stream-tile": "^2.11.1",
+    "@dustil/stream-tile-handler": "^2.10.1",
+    "@dustil/streamid": "^2.8.0-rc.0",
     "@ethersproject/providers": "^5.5.1",
     "@ipld/dag-cbor": "^7.0.0",
     "@stablelib/random": "^1.0.1",
@@ -78,10 +78,10 @@
     "uint8arrays": "^3.0.0"
   },
   "devDependencies": {
-    "@ceramicnetwork/3id-did-resolver": "^2.8.0-rc.0",
-    "@ceramicnetwork/ipfs-daemon": "^2.8.0-rc.0",
     "@databases/pg-test": "^3.1.2",
     "@didtools/cacao": "^1.0.0",
+    "@dustil/3id-did-resolver": "^2.8.1",
+    "@dustil/ipfs-daemon": "^2.8.1",
     "@types/node": "^18.0.3",
     "csv-parser": "^3.0.0",
     "did-resolver": "^3.1.5",
