--- a/packages/pinning-crust-backend/package.json
+++ b/packages/pinning-crust-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/pinning-crust-backend",
-  "version": "2.7.0",
+  "version": "2.7.1",
   "description": "Crust Pinning backend",
   "keywords": [
     "ceramic",
@@ -41,7 +41,7 @@
     "uint8arrays": "^3.0.0"
   },
   "devDependencies": {
-    "@ceramicnetwork/common": "^2.15.0-rc.0",
+    "@dustil/common": "^2.15.2",
     "multiformats": "^9.5.8"
   },
   "publishConfig": {
