--- a/packages/stream-caip10-link-handler/package.json
+++ b/packages/stream-caip10-link-handler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/stream-caip10-link-handler",
-  "version": "2.8.0",
+  "version": "2.8.1",
   "description": "Ceramic AccountLink stream handler",
   "keywords": [
     "ceramic",
@@ -39,10 +39,10 @@
     "clean": "npx rimraf ./lib"
   },
   "dependencies": {
-    "@ceramicnetwork/blockchain-utils-validation": "^2.7.0-rc.0",
-    "@ceramicnetwork/common": "^2.15.0-rc.0",
-    "@ceramicnetwork/stream-caip10-link": "^2.10.0-rc.0",
-    "@ceramicnetwork/stream-handler-common": "^1.5.0-rc.0"
+    "@dustil/blockchain-utils-validation": "^2.7.1",
+    "@dustil/common": "^2.15.2",
+    "@dustil/stream-caip10-link": "^2.10.1",
+    "@dustil/stream-handler-common": "^1.5.1"
   },
   "devDependencies": {
     "@stablelib/sha256": "^1.0.1",
