--- a/packages/stream-handler-common/package.json
+++ b/packages/stream-handler-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/stream-handler-common",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "Ceramic stream handler common types and utilities",
   "keywords": [
     "ceramic",
@@ -41,8 +41,8 @@
     "clean": "npx rimraf ./lib"
   },
   "dependencies": {
-    "@ceramicnetwork/common": "^2.15.0-rc.0",
-    "@ceramicnetwork/streamid": "^2.8.0-rc.0",
+    "@dustil/common": "^2.15.2",
+    "@dustil/streamid": "^2.8.0-rc.0",
     "lodash.clonedeep": "^4.5.0"
   }
 }
