--- a/packages/stream-tile-handler/package.json
+++ b/packages/stream-tile-handler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/stream-tile-handler",
-  "version": "2.10.0",
+  "version": "2.10.1",
   "description": "Ceramic Tile Document stream handler",
   "keywords": [
     "ceramic",
@@ -38,10 +38,10 @@
     "clean": "npx rimraf ./lib"
   },
   "dependencies": {
-    "@ceramicnetwork/common": "^2.15.0-rc.0",
-    "@ceramicnetwork/stream-handler-common": "^1.5.0-rc.0",
-    "@ceramicnetwork/stream-tile": "^2.11.0-rc.0",
-    "@ceramicnetwork/streamid": "^2.8.0-rc.0",
+    "@dustil/common": "^2.15.2",
+    "@dustil/stream-handler-common": "^1.5.1",
+    "@dustil/stream-tile": "^2.11.1",
+    "@dustil/streamid": "^2.8.0-rc.0",
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
     "fast-json-patch": "^3.1.0",
@@ -50,8 +50,8 @@
     "uint8arrays": "^3.0.0"
   },
   "devDependencies": {
-    "@ceramicnetwork/3id-did-resolver": "^2.8.0-rc.0",
     "@didtools/cacao": "^1.0.0",
+    "@dustil/3id-did-resolver": "^2.8.1",
     "@ipld/dag-cbor": "^7.0.0",
     "@stablelib/sha256": "^1.0.1",
     "@types/lodash.clonedeep": "^4.5.6",
