--- a/packages/stream-tile/package.json
+++ b/packages/stream-tile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dustil/stream-tile",
-  "version": "2.11.0",
+  "version": "2.11.1",
   "description": "Ceramic Tile Document stream type",
   "keywords": [
     "ceramic",
@@ -38,8 +38,8 @@
     "clean": "npx rimraf ./lib"
   },
   "dependencies": {
-    "@ceramicnetwork/common": "^2.15.0-rc.0",
-    "@ceramicnetwork/streamid": "^2.8.0-rc.0",
+    "@dustil/common": "^2.15.2",
+    "@dustil/streamid": "^2.8.0-rc.0",
     "@ipld/dag-cbor": "^7.0.0",
     "@stablelib/random": "^1.0.1",
     "dids": "^3.4.0",
